# golem-social-net-rust

./: .gitignore  BLOG_POST.md  Cargo.toml  README.md  architecture.puml  golem.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmark/: Cargo.toml  README.md  report.html
benchmark/src/: data.rs  domain.rs  goose_ext.rs  main.rs
common-rust/: golem.yaml
components-rust/social-net-rust-social-net/: Cargo.toml  golem.yaml
components-rust/social-net-rust-social-net/.wit/wit/: main.wit
components-rust/social-net-rust-social-net/src/: lib.rs
components-rust/social-net-rust-social-net/src/chat/: mod.rs
components-rust/social-net-rust-social-net/src/common/: mod.rs
components-rust/social-net-rust-social-net/src/post/: mod.rs
components-rust/social-net-rust-social-net/src/user/: mod.rs
components-rust/social-net-rust-social-net/src/user_chats/: mod.rs
components-rust/social-net-rust-social-net/src/user_posts/: mod.rs
components-rust/social-net-rust-social-net/src/user_timeline/: mod.rs
data/: import.yaml
data/fixtures/: followings.csv  friends.csv
docker/: .env  compose.yaml
frontend/: vite.config.ts
frontend/src/: App.vue  api.ts
frontend/src/components/: ChatMessage.vue  ChatWindow.vue  CommentItem.vue  NavBar.vue  PostCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  user.ts
frontend/src/views/: HomeView.vue  ProfileView.vue
