[workspace]
resolver = "2"
members = ["components-rust/*", "common-rust/*"]
exclude = ["benchmark"]

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]

golem-rust = { version = "1.10.4", features = ["export_load_snapshot", "export_save_snapshot", "export_golem_agentic", "golem_ai", "chrono"] }

# Advanced HTTP client, alternative of wstd::http
# golem-wasi-http = { version = "0.1.0", features = ["json"] }

log = { version = "0.4.29", features = ["kv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wstd = {version = "=0.5.4", features = ["default", "json"] }
chrono = "0.4"
email_address = "0.2.9"
uuid = { version = "1.18.1", features = ["v4"] }
schemars = { version = "1.1.0", features = ["preserve_order"] }
