[package]
name = "benchmark"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "^0.1"
goose = "^0.17"
tokio = "^1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }