[package]
name = "social_net_rust_social_net"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# To use common shared agent definitions, place them in common_lib and uncomment the line below
# common-lib = { path = "../../common-rust/common-lib" }

log = { workspace = true }
golem-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }
chrono = { workspace = true }
email_address =  { workspace = true }
uuid =  { workspace = true }
schemars = { workspace = true }
regex = "1.12.2"
futures = "0.3.32"
md5 = "0.7.0"